--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   "name": "yooda-comp",
   "main": "dist/index.js",
   "dependencies": {
-    "lit-html": "^1.1.2",
-    "lit-element": "^2.2.1"
+    "lit-element": "2.2.1",
+    "lit-html": "1.1.2"
   },
   "devDependencies": {
-    "@web/dev-server": "^0.1.1",
-    "concurrently": "^5.3.0",
-    "typescript": "^4.1.3",
-    "tslib": "^2.0.3",
-    "eslint": "^6.1.0",
-    "@open-wc/eslint-config": "^4.2.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "prettier": "^2.0.4",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^1.0.0",
-    "lint-staged": "^10.0.0",
-    "@web/test-runner": "^0.11.5",
-    "@open-wc/testing": "^2.0.0",
-    "@web/dev-server-storybook": "^0.3.2"
+    "@open-wc/eslint-config": "4.2.0",
+    "@open-wc/testing": "2.5.32",
+    "@typescript-eslint/eslint-plugin": "4.13.0",
+    "@typescript-eslint/parser": "4.13.0",
+    "@web/dev-server": "0.1.4",
+    "@web/dev-server-storybook": "0.3.3",
+    "@web/test-runner": "0.12.2",
+    "concurrently": "5.3.0",
+    "eslint": "7.17.0",
+    "eslint-config-prettier": "7.1.0",
+    "husky": "4.3.7",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "tslib": "2.1.0",
+    "typescript": "4.1.3"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
