--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
-    "build": "tsc",
-    "prepublish": "tsc",
+    "build:js": "NODE_ENV=production esbuild --bundle --format=esm --outfile=dist/bundle.js index.ts",
+    "build:css": "NODE_ENV=production postcss -r dist/bundle.js",
+    "build": "npm run build:js && npm run build:css",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "test": "tsc && wtr --coverage",
@@ -24,17 +25,26 @@
   "devDependencies": {
     "@open-wc/eslint-config": "4.2.0",
     "@open-wc/testing": "2.5.32",
+    "@stylelint/postcss-css-in-js": "0.37.2",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
     "@web/dev-server": "0.1.4",
     "@web/dev-server-storybook": "0.3.3",
     "@web/test-runner": "0.12.2",
+    "autoprefixer": "10.2.1",
     "concurrently": "5.3.0",
+    "esbuild": "0.8.31",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "husky": "4.3.7",
     "lint-staged": "10.5.3",
+    "postcss": "8.2.4",
+    "postcss-cli": "8.3.1",
+    "postcss-discard-comments": "4.0.2",
+    "postcss-discard-empty": "4.0.1",
+    "postcss-syntax": "0.36.2",
     "prettier": "2.2.1",
+    "tailwindcss": "2.0.2",
     "tslib": "2.1.0",
     "typescript": "4.1.3"
   },
