--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
-    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
-    "build:js": "NODE_ENV=production esbuild --bundle --format=esm --outfile=dist/bundle.js index.ts",
-    "build:css": "NODE_ENV=production postcss -r dist/bundle.js",
-    "build": "npm run build:js && npm run build:css",
+    "clean": "rimraf dist",
+    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds --hmr\"",
+    "dev": "rollup -c -w",
+    "build": "yarn clean && NODE_ENV=production rollup -c",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
-    "test": "tsc && wtr --coverage",
-    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
+    "test": "tsc && NODE_ENV=test wtr --coverage",
+    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"NODE_ENV=test wtr --watch\"",
     "storybook": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds -c .storybook/server.mjs\"",
     "storybook:build": "tsc && build-storybook"
   },
@@ -19,21 +19,27 @@
   "name": "yooda-comp",
   "main": "dist/index.js",
   "dependencies": {
-    "lit-element": "2.2.1",
-    "lit-html": "1.1.2"
+    "lit-element": "2.4.0",
+    "lit-html": "1.3.0",
+    "static-params": "0.1.3"
   },
   "devDependencies": {
+    "@open-wc/dev-server-hmr": "0.1.0",
     "@open-wc/eslint-config": "4.2.0",
     "@open-wc/testing": "2.5.32",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "11.0.1",
     "@stylelint/postcss-css-in-js": "0.37.2",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
     "@web/dev-server": "0.1.4",
+    "@web/dev-server-esbuild": "0.2.11",
+    "@web/dev-server-rollup": "0.3.2",
     "@web/dev-server-storybook": "0.3.3",
     "@web/test-runner": "0.12.2",
     "autoprefixer": "10.2.1",
     "concurrently": "5.3.0",
-    "esbuild": "0.8.31",
+    "esbuild": "0.8.32",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "husky": "4.3.7",
@@ -44,6 +50,13 @@
     "postcss-discard-empty": "4.0.1",
     "postcss-syntax": "0.36.2",
     "prettier": "2.2.1",
+    "rimraf": "3.0.2",
+    "rollup": "2.36.1",
+    "rollup-plugin-dts": "2.0.1",
+    "rollup-plugin-esbuild": "2.6.1",
+    "rollup-plugin-filesize": "9.1.0",
+    "rollup-plugin-postcss": "4.0.0",
+    "rollup-plugin-terser": "7.0.2",
     "tailwindcss": "2.0.2",
     "tslib": "2.1.0",
     "typescript": "4.1.3"
