--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "static-params": "0.1.3"
   },
   "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/eslint-parser": "7.12.1",
+    "@babel/eslint-plugin": "7.12.1",
     "@open-wc/dev-server-hmr": "0.1.0",
     "@open-wc/eslint-config": "4.2.0",
     "@open-wc/testing": "2.5.32",
@@ -42,6 +45,12 @@
     "esbuild": "0.8.32",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-html": "6.1.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-lit": "1.3.0",
+    "eslint-plugin-lit-a11y": "1.0.1",
+    "eslint-plugin-no-only-tests": "2.4.0",
+    "eslint-plugin-wc": "1.2.0",
     "husky": "4.3.7",
     "lint-staged": "10.5.3",
     "postcss": "8.2.4",
@@ -57,6 +66,7 @@
     "rollup-plugin-filesize": "9.1.0",
     "rollup-plugin-postcss": "4.0.0",
     "rollup-plugin-terser": "7.0.2",
+    "sinon": "9.2.3",
     "tailwindcss": "2.0.2",
     "tslib": "2.1.0",
     "typescript": "4.1.3"
