--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "name": "yooda-comp",
   "main": "dist/index.js",
   "dependencies": {
+    "@open-wc/lit-helpers": "0.3.12",
     "lit-element": "2.4.0",
     "lit-html": "1.3.0",
     "static-params": "0.1.3"
