--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "version": "0.0.0",
   "name": "yooda-comp",
   "main": "dist/index.js",
-  "dependencies": {
+  "peerDependencies": {
     "@open-wc/lit-helpers": "0.3.12",
     "lit-element": "2.4.0",
     "lit-html": "1.3.0",
-    "static-params": "0.1.3"
+    "static-params": "0.1.3",
+    "style-inject": "0.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -30,6 +31,7 @@
     "@babel/eslint-plugin": "7.12.1",
     "@open-wc/dev-server-hmr": "0.1.0",
     "@open-wc/eslint-config": "4.2.0",
+    "@open-wc/lit-helpers": "0.3.12",
     "@open-wc/testing": "2.5.32",
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.1",
@@ -54,20 +56,26 @@
     "eslint-plugin-wc": "1.2.0",
     "husky": "4.3.7",
     "lint-staged": "10.5.3",
+    "lit-element": "2.4.0",
+    "lit-html": "1.3.0",
     "postcss": "8.2.4",
     "postcss-cli": "8.3.1",
     "postcss-discard-comments": "4.0.2",
     "postcss-discard-empty": "4.0.1",
     "postcss-syntax": "0.36.2",
+    "postcss-url": "10.1.1",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "rollup": "2.36.1",
+    "rollup-plugin-copy": "3.3.0",
     "rollup-plugin-dts": "2.0.1",
     "rollup-plugin-esbuild": "2.6.1",
     "rollup-plugin-filesize": "9.1.0",
     "rollup-plugin-postcss": "4.0.0",
     "rollup-plugin-terser": "7.0.2",
     "sinon": "9.2.3",
+    "static-params": "0.1.3",
+    "style-inject": "0.3.0",
     "tailwindcss": "2.0.2",
     "tslib": "2.1.0",
     "typescript": "4.1.3"
